--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-redux": "^7.1.3",
     "react-scripts": "3.3.0",
     "react-transition-group": "^4.3.0",
+    "redux": "^4.0.4",
     "styled-components": "^5.0.0-rc.2"
   },
   "scripts": {
