--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "redux": "^4.0.4",
     "redux-immutable": "^4.0.0",
     "redux-thunk": "^2.3.0",
-    "styled-components": "^5.0.0-rc.2"
+    "styled-components": "^5.0.0-rc.2",
+    "react-loadable": "^5.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
